More Authentication - CustomAuthStateProvider
Added jwt, logout, profile and change password

--- a/BlazorEcommerce/Server/appsettings.json
+++ b/BlazorEcommerce/Server/appsettings.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS; Database=BlazorEcommerce; Trusted_Connection=true;"
   },
+  "AppSettings": {
+    "token" :  "supersecrettokenkey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
